(library
 (name ppx_debug)
 (public_name ppx_debug)
 (kind ppx_rewriter)
 (modules Ppx_debug)
 (libraries typedppxlib ppx_debug_runtime_data)
 (ppx_runtime_libraries ppx_debug.runtime)
 (preprocess
  (pps ppxlib.metaquot)))

(library
 (name ppx_debug_runtime)
 (public_name ppx_debug.runtime)
 (modules Ppx_debug_runtime)
 (libraries typedppxlib ppx_debug_runtime_data unix))

(library
 (name ppx_debug_runtime_data)
 (public_name ppx_debug.runtime_data)
 (modules Ppx_debug_runtime_data)
 (libraries typedppxlib))

(executable
 (name test)
 (modules Test)
 (libraries base compiler-libs)
 (preprocess
  (staged_pps ppx_debug)))

(rule
 (alias runtest)
 (deps ./test.exe)
 (action
  (run ./test.exe)))
